--- a/vijay.html
+++ b/vijay.html
@@ -3,3 +3,4 @@
 </center>
 <hr>
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, atque beatae vitae dicta ducimus fuga sit sunt architecto ratione tempora ipsa, explicabo delectus inventore libero nesciunt totam id vero dolor non maxime mollitia natus. Sed modi, recusandae voluptate sint magnam velit dolorum perferendis fuga voluptates sit quas molestiae. Labore asperiores fuga tenetur magnam natus qui repudiandae, cupiditate aut ipsam tempore. Optio id officia iure magni tempore possimus quisquam commodi dolorum. Officia omnis, cupiditate quos, rem illo numquam eaque totam perferendis et quis unde ab vero asperiores nisi. Obcaecati labore magnam sequi sit repellat repudiandae quis delectus, sed dolor quasi. Molestias.</p>
+<p>contact : 1234567890</p>
